<resources>
    <string name="app_name">NewFirstApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="phonenumber">Phone  Number</string>
    <string name="add">Add</string>
    <string name="p">P</string>
    <string name="peerapat">Peerapat Yodnil</string>
    <string name="Age">Age : 20</string>
</resources>