<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:context=".ProfileFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="508dp"
                android:layout_height="1548dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/img1" />

            <TextView
                android:id="@+id/P"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abril_fatface"
                android:text="@string/p"
                android:textAlignment="center"
                android:textColor="#FF0000"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#1E1111"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/Peerapat_yodnil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abril_fatface"
                android:text="@string/peerapat"
                android:textAlignment="center"
                android:textColor="#FF0000"
                android:textColorHighlight="#FF0000"
                android:textColorHint="#FF0000"
                android:textColorLink="#FF0000"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@+id/P"
                tools:layout_editor_absoluteX="0dp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="439dp"
                android:layout_height="705dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Age"
                app:srcCompat="@drawable/img2" />

            <TextView
                android:id="@+id/Age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abril_fatface"
                android:text="@string/Age"
                android:textColor="#FF0000"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Peerapat_yodnil" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>