<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="addcontactViewModel"
            type="peerapat.yodnil.newfirstapp.AddContactViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ContactFragment">

        <!-- TODO: Update blank fragment layout -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="488dp"
                android:layout_height="818dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/img1" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="text"
                android:textColor="#FF0000"
                android:textColorHint="#FF0000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextTextPersonPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/phonenumber"
                android:inputType="text"
                android:textColor="#FF0000"
                android:textColorHint="#FF0000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

            <TextView
                android:id="@+id/textview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="148dp"
                android:text="@{addcontactViewModel.contactString}"
                android:textColor="#F40000"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="-83dp" />

            <Button
                android:id="@+id/buttonInsert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->addcontactViewModel.onContactAdd()}"
                android:text="@string/add"
                android:textAlignment="center"
                android:textColor="#FF0000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonPhone" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>